charts/redis/istio/gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: redis-gw
  namespace: db
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 6379
      name: tcp-redis
      protocol: TCP
    hosts: ["*"]
